# PythonProject3

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_clases_py.html  z_145eef247bfb46b6_utils_py.html
src/: clases.py  utils.py
tests/: test_clases.py  test_utils.py
